--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ Assets/AssetStoreTools.meta
 Assets/AssetStoreTools/Editor.meta
 Assets/AssetStoreTools/Editor/AssetStoreTools.dll
 Assets/AssetStoreTools/Editor/AssetStoreTools.dll.meta
+.idea/
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll.meta
+Assets/Plugins/Editor/JetBrains.meta
