--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ Assets/AssetStoreTools/Editor/AssetStoreTools.dll.meta
 Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll
 Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll.meta
 Assets/Plugins/Editor/JetBrains.meta
+Assets/Garbage/
+Assets/Garbage.meta
